--- a/shoreline-agent/templates/shoreline.yaml
+++ b/shoreline-agent/templates/shoreline.yaml
@@ -95,7 +95,10 @@ spec:
               value: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
             - name: K8S_TOKEN_PATH
               value: /var/run/secrets/kubernetes.io/serviceaccount/token
-            {{- if .Values.agent.resource.custSecret }}
+            {{- if .Values.global.customer_secret_filepath }}
+            - name: SECRET_FILEPATH
+              value: "{{ .Values.global.customer_secret_filepath }}"
+            {{- else if .Values.agent.resource.custSecret }}
             {{ toYaml .Values.agent.resource.custSecret | nindent 12 }}
             {{- end }}
             - name: SECRETS_DIRECTORY
@@ -197,6 +200,10 @@ spec:
               name: onprem-data-volume
               readOnly: false
             {{- end }}
+            {{- if .Values.global.customer_secret_filepath }}
+            - name: config-data
+              mountPath: /config
+            {{- end }}
             {{- if .Values.agent.resource.additionalVolumeMounts }}
             {{- toYaml .Values.agent.resource.additionalVolumeMounts | nindent 12 }}
             {{- end }}
@@ -282,6 +289,10 @@ spec:
           configMap:
             name: entrypoint
             defaultMode: 0744
+        {{- end }}
+        {{- if .Values.global.customer_secret_filepath }}
+        - name: config-data
+          emptyDir: {}
         {{- end }}
         {{- if .Values.agent.resource.additionalVolumes }}
         {{- toYaml .Values.agent.resource.additionalVolumes | nindent 8 }}
