--- a/shoreline-agent/templates/namespace.yaml
+++ b/shoreline-agent/templates/namespace.yaml
@@ -2,3 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ tpl .Values.global.namespace . }}
+  {{- if .Values.agent.namespaceMetadata }}
+  {{- toYaml .Values.agent.namespaceMetadata | nindent 2 }}
+  {{- end }}
