--- a/shoreline-agent/templates/clusterrole.yaml
+++ b/shoreline-agent/templates/clusterrole.yaml
@@ -98,5 +98,5 @@ rules:
   - watch
 {{- end }}
 {{- if .Values.clusterRoleRules }}
-{{ toYaml .Values.clusterRoleRules }}
+{{- toYaml .Values.clusterRoleRules }}
 {{- end }}
