--- a/shoreline-agent/templates/role.yaml
+++ b/shoreline-agent/templates/role.yaml
@@ -12,5 +12,5 @@ rules:
   - get
   - list
 {{- if .Values.shorelineRoleRules }}
-{{ toYaml .Values.shorelineRoleRules }}
+{{- toYaml .Values.shorelineRoleRules }}
 {{- end }}
