--- a/shoreline-agent/templates/scraperconfigmap.yaml
+++ b/shoreline-agent/templates/scraperconfigmap.yaml
@@ -123,7 +123,7 @@ data:
         regex: (istio_request_duration_milliseconds_count|istio_request_duration_milliseconds_bucket)
     {{- end }}
     {{- if .Values.scraperConfig.exporters.customConfig }}
-    {{ toYaml .Values.scraperConfig.exporters.customConfig | nindent 4 }}
+    {{- toYaml .Values.scraperConfig.exporters.customConfig | nindent 4 }}
     {{- end }}
   {{- end }}
 kind: ConfigMap
