--- a/shoreline-agent/templates/serviceaccount.yaml
+++ b/shoreline-agent/templates/serviceaccount.yaml
@@ -7,7 +7,7 @@ metadata:
     eks.amazonaws.com/role-arn: {{ .Values.agent.serviceaccount.aws_role }}
     {{- end }}
     {{- if .Values.agent.serviceaccount.annotations }}
-    {{ toYaml .Values.agent.serviceaccount.annotations | nindent 4 }}
+    {{- toYaml .Values.agent.serviceaccount.annotations | nindent 4 }}
     {{- end }}
   {{- end }}
   name: {{ tpl .Values.global.namespace . }}-sa
