remove namespace from helm chart

--- a/shoreline-agent/templates/capemconfigmap.yaml
+++ b/shoreline-agent/templates/capemconfigmap.yaml
@@ -6,5 +6,5 @@ data:
 kind: ConfigMap
 metadata:
   name: ca-pemstore
-  namespace: {{ tpl .Values.global.namespace . }}
+  namespace: {{ .Release.Namespace }}
 {{- end }}
