--- a/shoreline-agent/templates/serviceaccount.yaml
+++ b/shoreline-agent/templates/serviceaccount.yaml
@@ -10,5 +10,6 @@ metadata:
     {{- toYaml .Values.agent.serviceaccount.annotations | nindent 4 }}
     {{- end }}
   {{- end }}
-  name: {{ tpl .Values.global.namespace . }}-sa
-  namespace: {{ tpl .Values.global.namespace . }}
+  name: {{ .Values.global.name }}-sa
+  namespace: {{ .Release.Namespace }}
+ 
