--- a/shoreline-agent/templates/role.yaml
+++ b/shoreline-agent/templates/role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ .Values.global.name }}-agent-role
-  namespace: {{ tpl .Values.global.namespace . }}
+  namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups:
   - ""
