--- a/shoreline-agent/templates/secret.yaml
+++ b/shoreline-agent/templates/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: customer-secret
-  namespace: {{ tpl .Values.global.namespace . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app : {{ .Values.global.name }}
 type: Opaque
@@ -16,7 +16,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.global.name }}-agent
-  namespace: {{ tpl .Values.global.namespace . }}
+  namespace: {{ .Release.Namespace }}
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "imagePullSecret" . }}
